[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biodynamic"
version = "0.1.0"
description = "Open source biodynamic calendar library and REST API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "astronomy-engine>=2.1.19",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
biodynamic-api = "biodynamic.api.app:main"

[tool.hatch.build.targets.wheel]
packages = ["biodynamic"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
